<resources>
    <string name="app_name">Item Bord</string>
    <string name="instruction_edit">Vul gegevens in of pas gegevens aan en druk op bewaren</string>
    <string name="label_rubriek">Rubriek:</string>
    <string name="button_bewaren">Bewaren</string>
    <string name="label_opvolgingsitem">Opvolgingsitem:</string>
    <string name="head_logboek">Logboek</string>
    <string name="label_date">Datum:</string>
    <string name="label_beschrijving">Beschrijving:</string>
    <string name="hint_logDescription">Beschrijf het logitem...</string>
    <string name="koppelteken">-</string>
    <string name="hint_rubriek_naam">Rubriek naam</string>
    <string name="head_subrubrieken">Subrubrieken</string>
    <string name="head_opvolgingsitems">Opvolgingsitems</string>
    <string name="label_hoofdrubriek">Hoofdrubriek:</string>
    <string name="instr_vul_rubriek_in">Vul Rubriek in ...</string>
    <string name="fab_button">fab</string>
</resources>