<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditLog">

    <TextView
        android:id="@+id/instructionEditLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/instruction_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelLogRubriek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_rubriek"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionEditLog" />

    <TextView
        android:id="@+id/nameLogRubriek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/labelLogRubriek"
        app:layout_constraintStart_toEndOf="@+id/labelLogRubriek" />

    <TextView
        android:id="@+id/labelLogOpvolgingsitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_opvolgingsitem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogRubriek" />

    <TextView
        android:id="@+id/nameLogOpvolgingsitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/koppelteken"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelLogOpvolgingsitem"
        app:layout_constraintStart_toEndOf="@+id/labelLogOpvolgingsitem" />

    <TextView
        android:id="@+id/labelLogDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogOpvolgingsitem" />

    <EditText
        android:id="@+id/editItemLogDate"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/label_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelLogDate"
        app:layout_constraintStart_toEndOf="@+id/labelLogDate"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/labelLogDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_beschrijving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogDate" />

    <EditText
        android:id="@+id/editLogDescription"
        android:layout_width="276dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_logDescription"
        android:inputType="textLongMessage|textMultiLine"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelLogDescription"
        app:layout_constraintTop_toTopOf="@+id/labelLogDescription" />

    <Button
        android:id="@+id/buttonSaveLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_bewaren"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLogDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>